using Microsoft.AspNetCore.Identity;

namespace Domain.Entities.Identity;

/// <inheritdoc/>
public partial class UserRole : IdentityUserRole<int>
{
}
