@startuml schema

header

<font color=red>Warning:</font>
proof of concept.
[Application-Production] on [BOBO-DEV]

endheader
center footer Generated for demonstration

!define table(x) class x << (T,mistyrose) >> 
!define view(x) class x << (V,lightblue) >> 
!define tr(x) class x << (R,red) >> 
!define tf(x) class x << (F,darkorange) >> 
!define af(x) class x << (F,white) >> 
!define fn(x) class x << (F,plum) >> 
!define fs(x) class x << (F,tan) >> 
!define ft(x) class x << (F,wheat) >> 
!define if(x) class x << (F,gainsboro) >> 
!define p(x) class x << (P,indianred) >> 
!define pc(x) class x << (P,lemonshiffon) >> 
!define x(x) class x << (P,linen) >> 

hide methods
hide stereotypes
skinparam roundcorner 10
skinparam linetype ortho
skinparam classarrowcolor gray

table(Finance.Account) {
[Id] uniqueidentifier null <<pk>>
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[IBAN] varchar[25] null
[Provider] nvarchar[500] null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Common.Calendar) {
[Id] uniqueidentifier null <<pk>>
[Timestamp] timestamp not null
[Date] date null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Identity.Role) {
[Id] uniqueidentifier null <<pk>>
[Description] nvarchar[500] null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
[Name] nvarchar[256] null
[NormalizedName] nvarchar[256] null
[ConcurrencyStamp] nvarchar[max] null
}

table(Finance.Transaction) {
[Id] uniqueidentifier null <<pk>>
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[BookingDate] date null
[ValueDate] date null
[PostingText] nvarchar[100] null
[ClientBeneficiary] nvarchar[250] null
[Purpose] nvarchar[4000] null
[AccountNumber] varchar[25] null
[BankCode] varchar[25] null
[AmountEur] money null
[CreditorId] nvarchar[25] null
[MandateReference] nvarchar[50] null
[CustomerReference] nvarchar[50] null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Identity.User) {
[Id] uniqueidentifier null <<pk>>
[FirstName] nvarchar[100] null
[MiddleName] nvarchar[100] null
[LastName] nvarchar[100] null
[DateOfBirth] date null
[Preferences] xml null
[Picture] varbinary null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
[UserName] nvarchar[256] null
[NormalizedUserName] nvarchar[256] null
[Email] nvarchar[256] null
[NormalizedEmail] nvarchar[256] null
[EmailConfirmed] bit null
[PasswordHash] nvarchar[max] null
[SecurityStamp] nvarchar[max] null
[ConcurrencyStamp] nvarchar[max] null
[PhoneNumber] nvarchar[max] null
[PhoneNumberConfirmed] bit null
[TwoFactorEnabled] bit null
[LockoutEnd] datetimeoffset null
[LockoutEnabled] bit null
[AccessFailedCount] int null
}

table(Identity.RoleClaim) {
[Id] int null <<pk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
[RoleId] uniqueidentifier null <<fk>>
[ClaimType] nvarchar[max] null
[ClaimValue] nvarchar[max] null
}

table(Finance.AccountTransaction) {
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[AccountId] uniqueidentifier null <<pk>> <<fk>>
[TransactionId] uniqueidentifier null <<pk>> <<fk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Finance.AccountUser) {
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[AccountId] uniqueidentifier null <<pk>> <<fk>>
[UserId] uniqueidentifier null <<pk>> <<fk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Attendance.Attendance) {
[Id] uniqueidentifier null <<pk>>
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[UserId] uniqueidentifier null <<fk>>
[CalendarId] uniqueidentifier null <<fk>>
[AttendanceType] int null
[StartTime] time null
[EndTime] time null
[BreakTime] time null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Finance.Card) {
[Id] uniqueidentifier null <<pk>>
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[UserId] uniqueidentifier null <<fk>>
[AccountId] uniqueidentifier null <<fk>>
[CardType] int null
[PAN] varchar[25] null
[ValidUntil] date null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Attendance.Settings) {
[Id] uniqueidentifier null <<pk>>
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[UserId] uniqueidentifier null <<fk>>
[WorkDays] int null
[WorkHours] real null
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Identity.UserClaim) {
[Id] int null <<pk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
[UserId] uniqueidentifier null <<fk>>
[ClaimType] nvarchar[max] null
[ClaimValue] nvarchar[max] null
}

table(Identity.UserLogin) {
[LoginProvider] nvarchar[450] null <<pk>>
[ProviderKey] nvarchar[450] null <<pk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
[ProviderDisplayName] nvarchar[max] null
[UserId] uniqueidentifier null <<fk>>
}

table(Identity.UserRole) {
[UserId] uniqueidentifier null <<pk>> <<fk>>
[RoleId] uniqueidentifier null <<pk>> <<fk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

table(Identity.UserToken) {
[UserId] uniqueidentifier null <<pk>> <<fk>>
[LoginProvider] nvarchar[450] null <<pk>>
[Name] nvarchar[450] null <<pk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
[Value] nvarchar[max] null
}

table(Finance.CardTransaction) {
[Timestamp] timestamp not null
[CreatedBy] uniqueidentifier null
[ModifiedBy] uniqueidentifier null
[CardId] uniqueidentifier null <<pk>> <<fk>>
[TransactionId] uniqueidentifier null <<pk>> <<fk>>
[PeriodEnd] datetime2 null
[PeriodStart] datetime2 null
}

Finance.AccountTransaction --> Finance.Account:FK
Finance.AccountUser --> Finance.Account:FK
Finance.Card --> Finance.Account:FK
Attendance.Attendance --> Common.Calendar:FK
Identity.RoleClaim --> Identity.Role:FK
Identity.UserRole --> Identity.Role:FK
Finance.AccountTransaction --> Finance.Transaction:FK
Finance.CardTransaction --> Finance.Transaction:FK
Finance.AccountUser --> Identity.User:FK
Attendance.Attendance --> Identity.User:FK
Finance.Card --> Identity.User:FK
Attendance.Settings --> Identity.User:FK
Identity.UserClaim --> Identity.User:FK
Identity.UserLogin --> Identity.User:FK
Identity.UserRole --> Identity.User:FK
Identity.UserToken --> Identity.User:FK
Finance.CardTransaction --> Finance.Card:FK

@enduml